# mcp-roblox-demo

./: __main__.py  pyproject.toml
src/mcp_roblox_demo/: server.py
